apollo-router/src/spec/query/snapshots/apollo_router__spec__query__transform__tests__remove_directive-10.snap
---
source: apollo-router/src/spec/query/transform.rs
expression: "TestResult { query, result }"
---
query:

            query Test($a: String, $b: String) {
                ...TestFragment @hasArg(arg: $a)
                ...TestFragment2 @hasArg(arg: $b)
                c
            }

            fragment TestFragment on Query {
                __typename @remove
            }

            fragment TestFragment2 on Query {
                __typename
            }
            
filtered:
query Test($b: String) {
  ...TestFragment2 @hasArg(arg: $b)
  c
}

fragment TestFragment2 on Query {
  __typename
}
