apollo-router/src/spec/query/snapshots/apollo_router__spec__query__transform__tests__remove_directive-11.snap
---
source: apollo-router/src/spec/query/transform.rs
expression: "TestResult { query, result }"
---
query:

            query Test($a: String, $b: String) {
                ... @hasArg(arg: $a) {
                  c @remove
                }
                ... @hasArg(arg: $b) {
                  test: c
                }
                c
            }
            
filtered:
query Test($b: String) {
  ... @hasArg(arg: $b) {
    test: c
  }
  c
}
