apollo-router/src/spec/query/snapshots/apollo_router__spec__query__transform__tests__remove_directive-12.snap
---
source: apollo-router/src/spec/query/transform.rs
expression: "TestResult { query, result }"
---
query:

         query($a: String, $b: String) {
             c
             f(arg: [["a"], [$a], ["b"]]) @remove
             aliased: f(arg: [["a"], [$b]])
         }
         
filtered:
query($b: String) {
  c
  aliased: f(arg: [["a"], [$b]])
}
