apollo-router/src/spec/query/snapshots/apollo_router__spec__query__transform__tests__remove_directive-13.snap
---
source: apollo-router/src/spec/query/transform.rs
expression: "TestResult { query, result }"
---
query:

         query($a: String, $b: String) {
             c
             g(arg: [{a: $a}, {a: "a"}]) @remove
             aliased: g(arg: [{a: "a"}, {a: $b}])
         }
         
filtered:
query($b: String) {
  c
  aliased: g(arg: [{a: "a"}, {a: $b}])
}
