apollo-router/src/spec/query/snapshots/apollo_router__spec__query__transform__tests__remove_directive-14.snap
---
source: apollo-router/src/spec/query/transform.rs
expression: "TestResult { query, result }"
---
query:

         query($a: String, $b: String) {
             c
             e(arg: {c: [$a]}) @remove
             aliased: e(arg: {c: [$b]})
         }
         
filtered:
query($b: String) {
  c
  aliased: e(arg: {c: [$b]})
}
