apollo-router/src/spec/query/snapshots/apollo_router__spec__query__transform__tests__remove_directive-4.snap
---
source: apollo-router/src/spec/query/transform.rs
expression: "TestResult { query, result }"
---
query:

            query($a: String) {
                ... F @remove
                c
            }

            fragment F on Query {
                a(arg: $a)
            }
filtered:
{
  c
}
