apollo-router/src/spec/query/snapshots/apollo_router__spec__query__transform__tests__remove_directive-7.snap
---
source: apollo-router/src/spec/query/transform.rs
expression: "TestResult { query, result }"
---
query:

            query($a: String, $b: String) {
                c
                d(arg: ["a", $a, "b"]) @remove
                aliased: d(arg: ["$b"])
            }
            
filtered:
query($a: String, $b: String) {
  c
  aliased: d(arg: ["$b"])
}
