apollo-router/src/spec/query/snapshots/apollo_router__spec__query__transform__tests__remove_directive.snap
---
source: apollo-router/src/spec/query/transform.rs
expression: "TestResult { query, result }"
---
query:

            query {
                a
               ... F @remove
            }

            fragment F on Query {
                b {
                    a
                }
            }
filtered:
{
  a
}
